Fix spacing

--- a/src/components/homeInfo/Home-Info.scss
+++ b/src/components/homeInfo/Home-Info.scss
@@ -9,6 +9,7 @@
 
       .home-info-title {
         font-size: 70px;
+        width: 80%;
       }
 
       .home-info-description {
