--- a/src/components/learn-more-info/LeanMoreInfo.scss
+++ b/src/components/learn-more-info/LeanMoreInfo.scss
@@ -1,5 +1,5 @@
 .learn-more-section {
-  margin-bottom: 20%;
+  margin-bottom: 150px;
 
   .sub-section {
     height: 454px;
